tests/errors/phantom-check/loop.fil
comp Foo<G:1>() -> () {}
comp main<G:1>() -> () {
    for #i in 0..3 {
        f := new Foo<G>();
    }
}